# fa_seq_compressibility

./: Cargo.toml
src/: main.rs
test/: input.fa
