[package]
name = "fa_seq_compressibility"
version = "0.1.2"
authors = ["Youtao Lu <luyoutao@sas.upenn.edu>"]
edition = "2018"
license = "MPL-2.0"
description = "Calculate sequence compressibility in fixed-sized windows from FASTA"

[dependencies]
getopts = "0.2"
regex = "1.3"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
flate2 = "1.0"
